deleted:    home/images/tall.jpg 	modified:   home/index.htm 	modified:   resources/cityschema.css 	modified:   template/index.htm

--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -157,6 +157,12 @@ font-weight: 600;
 margin: 0;
 }
 
+.section_title {
+  font-size: 16px;
+  font-weight: 600;
+  margin: 0;
+  }
+
 img.title {
   padding: 10px 10px 10px 10px;
 }
