--- a/template/index.htm
+++ b/template/index.htm
@@ -2,10 +2,15 @@
 <!doctype html>
 <html lang="en">
 <!-- Hi Folks, this is the template file for pages in the citySchema.org documentation library -->
-<head>
+<head> <!-- Edit the following for each page -->
     <title>Template</title>
+    <meta name="description" content="Home page for the citySchema project.  A gateway for tools, techniques and documentation avout cross-siciplinary collaboration on city models. ">
+    <meta name="keywords" content="City Modeling, Digital Humanities, Geography">
+    <meta name="author" content="Paul B. Cote">
     
-
+<!-- don't edit between here and the Article div.  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <link rel="icon" href="../resources/images/favicon.png" type="image/x-icon">
     <script src="../resources/jquery/jquery-3.6.0.min.js"></script>
     <link href="../resources/cityschema.css" rel="stylesheet"> 
@@ -15,55 +20,58 @@
     <script src="../resources/cityschema_includes.js"></script>
     <!-- THis has to come after the cityschema_includes file-->
     <script src="../resources/cityschema.js"></script>
-</head>
-<body>
-    <div id="grid-container">
-      <div id="index-container">
-         <div id="index-header"> <!-- Content provided by cityschema_includes.js--> </div>
-         <div id="index">        <!-- Content provided by cityschema_includes.js--> </div>
-         <div id="index-footer"> <!-- Content provided by cityschema_includes.js--> </div>
-      </div> 
-      <div id="main-container">
-        <div id="header"> <!-- Content provided by cityschema_includes.js--> </div>
-         <div id="article">
-           <!-- This is where page-specific content belongs -->
-          <span class="title">for Cross-Disciplinary Collaboration on Digital City Models</span>
-            <p>Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya 
-              <h3 id="early">Early</h3>
-              <figure class="right">
-                <img class="scaled" src="images/tall.jpg">
-                <figcaption>Fig Right</figcaption>
-              </figure>
-              <p><a href="#late">Scroll to Late</a>  doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya 
-             </p>
-             <figure class="middle"> 
-               <img class="triptic" src="images/tall.jpg"> 
-               <img class="triptic" src="images/tall.jpg"> 
-               <img class="triptic" src="images/tall.jpg"> 
-               <figcaption>Triptic</figcaption>
-              </figure>
-             <p>Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya 
-             </p>
-             <figure class="middle"> 
-               <img class="scaled" src="images/wide.jpg"> 
-               <figcaption> Fig Middle</figcaption>
-              </figure>
-               <h3 class="heading" id="late">doing? </h3>
-               <p>Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <a href="#early">Scroll to Early</a> 
-            </p>
+    </head>
+    <body>
+      <div id="grid-container">
+        <div id="index-container">
+          <div id="index-header"> <!-- Content provided by cityschema_includes.js--> </div>
+          <div id="index">        <!-- Content provided by cityschema_includes.js--> </div>
+          <div id="index-footer"> <!-- Content provided by cityschema_includes.js--> </div>
+        </div> 
+        <div id="main-container">
+          <div id="header"> <!-- Content provided by cityschema_includes.js--> </div>
 
-            <table class="dictionary">
-              <tr><th>Heading 1</th><th>Heading 2</th></tr>
-              <tr><td>Row 1</td><td>Col 2</td></tr>
-              <tr><td>Row 1</td><td>Col 2</td></tr>
-            </table>
+<!-- Page content goes inside the article div -->
+<div id="article">
+  <h3 class="section_title">Section Title</h3>  <!-- Optional: would be the tile of the intro chapter.  -->
+  <h1 class="title">for Cross-Disciplinary Collaboration on Digital City Models</h1>
+    <p>Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya 
+      <h3 id="early">Early</h3>
+      <figure class="right">
+        <img class="scaled" src="images/tall.jpg">
+        <figcaption>Fig Right</figcaption>
+      </figure>
+      <p><a href="#late">Scroll to Late</a>  doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya 
+      </p>
+      <figure class="middle"> 
+        <img class="triptic" src="images/tall.jpg"> 
+        <img class="triptic" src="images/tall.jpg"> 
+        <img class="triptic" src="images/tall.jpg"> 
+        <figcaption>Triptic</figcaption>
+      </figure>
+      <p>Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya 
+      </p>
+      <figure class="middle"> 
+        <img class="scaled" src="images/wide.jpg"> 
+        <figcaption> Fig Middle</figcaption>
+      </figure>
+        <h3 class="heading" id="late">doing? </h3>
+        <p>Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <a href="#early">Scroll to Early</a> 
+    </p>
 
-            <p>Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? 
-            </p>
-            </div> <!-- Closes #article div -->
-        <div id="footer"> <!-- Content provided by cityschema_includes.js--> </div> 
-      </div> 
-    </div> <!-- closes grid container-->
-    </body>
-    </html>
+    <table class="dictionary">
+      <tr><th>Heading 1</th><th>Heading 2</th></tr>
+      <tr><td>Row 1</td><td>Col 2</td></tr>
+      <tr><td>Row 1</td><td>Col 2</td></tr>
+    </table>
+
+    <p>Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya <p>doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya doing? Hi how ya  how ya doing? Hi how ya doing? 
+    </p>
+</div> <!-- Closes #article div -->
+
+    <div id="footer"> <!-- Content provided by cityschema_includes.js--> </div> 
+  </div> <!-- Closes main container--> 
+</div> <!-- closes grid container-->
+</body>
+</html>
     
