--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -26,6 +26,7 @@
     'article article article article article'
     'footer footer footer footer footer'; 
   grid-template-rows: 50px auto 30px;
+  height: 100vh;
   /*overflow: auto;*/
   /*overflow: hidden;*/
   /*height: 100vh;*/
