--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -4,6 +4,9 @@
 /* The layout is governed by the grid mechanism 
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Roboto:wght@300&display=swap');
+
 #grid-container {
   display: grid;
   grid-template-columns: 250px 750px;
@@ -30,8 +33,8 @@
   /*overflow: auto;*/
   /*overflow: hidden;*/
   /*height: 100vh;*/
-
 }
+
 #index-container {
   display: grid;
   width: 250px;
@@ -46,6 +49,7 @@
   border-right-style: ridge;
   border-right-color: rgb(28, 87, 121);
   border-right-width: 1px;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 
@@ -58,6 +62,7 @@
        overflow-wrap: normal; 
        padding: 10px 0px 10px 10px;}
   #article { grid-area: article; 
+       /*background-color: green;*/
        padding: 10px 15px 10px 15px;}
   #footer { grid-area: footer; 
             padding: 0px 10px 15px 10px;}
@@ -81,11 +86,39 @@ html {
 /* Stops scrolling before target */
 :target:before {
   content: "";
-  display: block;
+  /*display: block;*/
   /*height: 70px;*/
-  padding-top: 65px;
-  margin: -65px 0 0;
+  /*padding-top: 65px;*/
+  margin-top: 65px;
 }
+
+.procedure {
+  margin-left: 20px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  padding: 0px 10px 10px 10px;
+  color: #333399;
+  background-color: #90d7f8;
+  border: 1px solid #1f7ebd;
+}
+
+.procedure h3{
+  margin-top: 10px;
+}
+
+.funfact {
+  margin-left: 20px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  padding: 0px 10px 10px 10px;
+  color: #333399;
+  background-color: #f7c272;
+  border: 1px solid #dbcba8;
+}
+.funfact h3{
+  margin-top: 10px;
+}
+
 
 /* I wish this worked,but it doesn't
 :target h3 {
@@ -97,7 +130,8 @@ html {
     margin: 0;  /*Eliminates tab scrollbar */
     color: rgb(28, 87, 121);
     background-color:#a7a09a;
-    font-family: Arial, sans-serif;
+    /*font-family: Arial, sans-serif;*/
+    font-family: 'Roboto', sans-serif;
 
   }
   body a:active {
@@ -182,14 +216,27 @@ text-align: center;
 
 }
 
+img {
+  transition:transform 0.25s ease;
+}
+
+img:hover {
+  -webkit-transform:scale(1.5);
+  transform:scale(1.5);
+}
+
 
 .middleflex {
     display: flex;
+    width: 100%;
+    height: 300px;
     }
 
-.middleflex >div {
-      padding: 0px 10px 10px 0px;
+.middleflex > img {
+      /*padding: 0px 10px 10px 0px; */
       text-align: center;
+      width:33%;
+      height: auto;
       }
 
 
@@ -198,8 +245,8 @@ text-align: center;
 .treeview .chapter  {
   list-style: none;
   cursor: pointer; 
-  font-family: "Arial Narrow", Arial, sans-serif;
-  font-weight: 550;
+  /*font-family: "Arial Narrow", Arial, sans-serif;*/
+  font-weight: 700;
 
 }
 
@@ -221,7 +268,7 @@ ul.treeview  {
   padding-left:0px;
   padding-top: 10px;
   /*list-style-position: inside;*/
-  font-family: "Arial Narrow", Arial, sans-serif;
+  /*font-family: "Arial Narrow", Arial, sans-serif;*/
   font-size: 15px;
 
 }
@@ -305,6 +352,18 @@ font-weight: 100;
 }
 
 
+
+img.scaled {
+  width: 100%; 
+  height: auto;
+}
+
+img.triptic {
+  width: 31%; 
+  height: auto;
+}
+
+
  figure.right {
   float: right;
   width: 45%;
@@ -332,16 +391,6 @@ figure.middle {
   margin: 0.5em;
   padding: 0.5em;
   background-color: rgb(245, 242, 239);
-}
-
-img.scaled {
-  width: 100%; 
-  height: auto;
-}
-
-.triptic {
-  width: 33%; 
-  height: auto;
 }
 
 table.dictionary {
