--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -220,9 +220,9 @@ img {
   transition:transform 0.25s ease;
 }
 
-img:hover {
-  -webkit-transform:scale(1.5);
-  transform:scale(1.5);
+img:active { 
+  -webkit-transform:scale(1.7);
+  transform:scale(1.7);
 }
 
 
