--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -86,10 +86,10 @@ html {
 /* Stops scrolling before target */
 :target:before {
   content: "";
-  /*display: block;*/
-  /*height: 70px;*/
-  /*padding-top: 65px;*/
-  margin-top: 65px;
+  display: block;
+  height: 66px;
+  /*padding-top: -65px; */
+  margin-top: -66px;
 }
 
 .procedure {
@@ -102,8 +102,25 @@ html {
   border: 1px solid #1f7ebd;
 }
 
+
 .procedure h3{
   margin-top: 10px;
+  font-size: 16px;
+}
+
+.tour {
+  margin-left: 20px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  padding: 0px 10px 10px 10px;
+  color: #333399;
+  background-color: #f3a4ef;
+  border: 1px solid #f323f3;
+}
+
+.tour h3{
+  margin-top: 10px;
+  font-size: 16px;
 }
 
 .funfact {
@@ -117,6 +134,7 @@ html {
 }
 .funfact h3{
   margin-top: 10px;
+  font-size: 16px;
 }
 
 
