modified:   home/index.htm 	new file:   repocat/images/ModelFinder.jpg 	new file:   repocat/images/download_page.jpg 	modified:   repocat/index.htm 	modified:   resources/cityschema.css 	modified:   resources/cityschema_includes.js 	modified:   template/index.htm

--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -285,7 +285,8 @@ ul.treeview  {
   margin-top: 0px;
   padding-left:0px;
   padding-top: 10px;
-  /*list-style-position: inside;*/
+  /*list-style-position: inside; */
+  /*list-style-position: outside;*/
   /*font-family: "Arial Narrow", Arial, sans-serif;*/
   font-size: 15px;
 
