--- a/template/index.htm
+++ b/template/index.htm
@@ -115,6 +115,7 @@
   <li><b>target="download"</b>: The tiled download page from the repo/catalog.
   <li><b>target="index"</b>: Documentation Index page from the repo/catalog.
   <li><b>target="arcdoc"</b>: link to software documentation.
+    <li><b>target="outboard"</b>: Link to a reference page outside of citySchema.org.
   </ul>
 
     <h3 id="blocks">Thematic Blocks</h3>
