new file:   model_management/images/model_mgt_files.jpg 	modified:   model_management/index.htm 	modified:   resources/cityschema.css 	modified:   resources/cityschema_includes.js 	new file:   resources/images/fullscreenexit2.png 	new file:   resources/images/playpause2.png 	new file:   resources/images/prevnext.png 	new file:   resources/slideshow_pbc.css 	new file:   resources/slideshow_pbc.js 	modified:   template/index.htm 	new file:   template/indexbk.htm 	new file:   terrain/images/tall.jpg 	new file:   terrain/images/wide.jpg 	new file:   terrain/index.htm

--- a/resources/cityschema.css
+++ b/resources/cityschema.css
@@ -114,8 +114,8 @@ html {
   margin-bottom: 35px;
   padding: 0px 10px 10px 10px;
   color: #333399;
-  background-color: #f3a4ef;
-  border: 1px solid #f323f3;
+  background-color: #f3c8f1;
+  border: 1px solid #d884d8;
 }
 
 .tour h3{
