--- a/template/index.htm
+++ b/template/index.htm
@@ -47,17 +47,17 @@
     data-playpaused = "playing"
     data-fadespeed = "10" >
   
-    <div class="slidecontainer" data-title="Treeline" data-caption="Away up to tree-line.">
+    <div class="slidecontainer" data-title="Wide Image" data-caption="Away up to tree-line.">
       <div class="slide"><img src="./images/wide.jpg" ></div>
       <div class="caption"></div>
-      <div class="learnmore"><a href='#early'>Learn More about Trees</a></div>
+      <div class="learnmore"><a href='#early'>Learn More about Wide Images</a></div>
    </div>
 
 
-    <div class="slidecontainer" data-title="Tall Boy" >
+    <div class="slidecontainer" data-title="Tall Image" >
       <div class="slide"> <img src="./images/tall.jpg"></div>
       <div class="caption"></div>
-      <div class="learnmore"><a href='#late'>Learn More about Texans</a></div>
+      <div class="learnmore"><a href='#late'>Learn More about Tall Images</a></div>
     </div>
 </div> <!-- Closes ooslideshow-->
 
@@ -73,19 +73,19 @@
   data-imgheight = "250px" 
   data-title = "" 
   data-playpaused = "paused"
-  &lt;div class="slidecontainer" data-title="Treeline" data-caption="Away up to tree-line."&gt;
+  &lt;div class="slidecontainer" data-title="Wide Image" data-caption="Away up to tree-line."&gt;
   &lt;div class="slide"&gt;&lt;img src="./images/wide.jpg" &gt;&lt;/div&gt;
-  &lt;div class="caption"&gt;&lt;p&gt;Now is the time for all good men to come to the TREELINE.  
+  &lt;div class="caption"&gt;&lt;p&gt;Now is the time for all good men to come to the Wide Image.  
   Lets make this a very long line so that we can see the wrap-around effect..&lt;/p&gt;
   &lt;p&gt;And then there was that other time
   &lt;p&gt;But lets focus on right now.
   &lt;p&gt;OK?  OK!
   &lt;/div&gt;
-  &lt;div class="learnmore"&gt;&lt;a href='#funfact'&gt;Learn More about Trees&lt;/a&gt;&lt;/div&gt;&lt;/div&gt;
-  &lt;div class="slidecontainer" data-title="Tall Boy" &gt;
+  &lt;div class="learnmore"&gt;&lt;a href='#funfact'&gt;Learn More about wide images&lt;/a&gt;&lt;/div&gt;&lt;/div&gt;
+  &lt;div class="slidecontainer" data-title="Tall Image" &gt;
     &lt;div class="slide"&gt; &lt;img src="./images/tall.jpg"&gt;&lt;/div&gt;
-    &lt;div class="caption"&gt;&lt;p&gt;Now is the time for Hes a long tall texan.&lt;/p&gt;&lt;/div&gt;
-    &lt;div class="learnmore"&gt;&lt;a href='#funfact'&gt;Learn More about Texans&lt;/a&gt;&lt;/div&gt;
+    &lt;div class="caption"&gt;&lt;p&gt;That image is mightty tall, but maxes out at 1005 .&lt;/p&gt;&lt;/div&gt;
+    &lt;div class="learnmore"&gt;&lt;a href='#funfact'&gt;Learn More about Tall Images&lt;/a&gt;&lt;/div&gt;
   &lt;/div&gt;
   &lt;/div&gt; &lt;!-- Closes moreslides--&gt;
 </pre>
@@ -102,20 +102,20 @@ data-title = ""
 data-playpaused = "paused"
 data-fadespeed = "10" >
 
-<div class="slidecontainer" data-title="Treeline" data-caption="Away up to tree-line.">
+<div class="slidecontainer" data-title="Wide Image" data-caption="Away up to tree-line.">
 <div class="slide"><img src="./images/wide.jpg" ></div>
-<div class="caption"><p>Now is the time for all good men to come to the TREELINE.  Lets make this a very long line so that we can see the wrap-around effect..</p>
+<div class="caption"><p>the wide image fills up the width. that we can see the wrap-around effect..</p>
 <p>And then there was that other time
 <p>But lets focus on right now.
 <p>OK?  OK!
 </div>
-<div class="learnmore"><a href='#funfact'>Learn More about Trees</a></div>
+<div class="learnmore"><a href='#funfact'>Learn More about Wide Images</a></div>
 </div>
 
-<div class="slidecontainer" data-title="Tall Boy" >
+<div class="slidecontainer" data-title="Tall Image" >
 <div class="slide"> <img src="./images/tall.jpg"></div>
-<div class="caption"><p>Now is the time for Hes a long tall texan.</p></div>
-<div class="learnmore"><a href='#funfact'>Learn More about Texans</a></div>
+<div class="caption"><p>That image is mightty tall, but maxes out at 1005 .</p></div>
+<div class="learnmore"><a href='#funfact'>Learn More about Tall Images</a></div>
 </div>
 
 </div> <!-- Closes ooslideshow-->
@@ -128,7 +128,7 @@ data-fadespeed = "10" >
 
 
       <figure class="right">
-        <img class="scaled" src="images/tall.jpg">
+        <img src="images/tall.jpg">
         <figcaption>Fig Right</figcaption>
       </figure>
 
@@ -138,7 +138,7 @@ data-fadespeed = "10" >
   <!-- notice: the indent of <pre> text is expressed by actual whitespace. -->
   <pre>
   &lt;figure class="right"&gt;
-  &lt;img class="scaled" src="images/tall.jpg"&gt;
+  &lt;img src="images/tall.jpg"&gt;
   &lt;figcaption&gt;Fig Right Caption&lt;/figcaption&gt;
   &lt;/figure&gt;
   </pre>
@@ -154,12 +154,12 @@ data-fadespeed = "10" >
        <p>Below this text, you will see the rendering of the following code:</p>
   <pre>
   &lt;figure class="middle"&gt;
-  &lt;img class="scaled" src="images/wide.jpg"&gt;
+  &lt; src="images/wide.jpg"&gt;
   &lt;figcaption&gt;Fig Middle Caption&lt;/figcaption&gt;
   &lt;/figure&gt;
   </pre>
       <figure class="middle">
-        <img class="scaled" src="images/wide.jpg">
+        <img src="images/wide.jpg">
         <figcaption>Middle Figure</figcaption>
       </figure>
 
@@ -220,7 +220,7 @@ data-fadespeed = "10" >
     <p>Then as things roll along, there is usually more conceptual description.  But before long, there might be a need for a sort of sidebar discussion.   These are topics that may be a zoom-in or a zoom-out.  These may be ideas that get linked to from other documents. These sidebars get a gold box but with the same bluish text.
     </p>
     <div id="funfact" class="funfact">
-      <h3>A Fun Fact/h3>
+      <h3>A Fun Fact</h3>
       <p>A div of <b>class="funfact"</b> starts out with an &lt;H3&gt; and then has some text explaining a sort of meta-topic that pertains to the ideas that surround it.  
       <p>The topic might zoom in or zoom out relative to the context.
       <p>this is the sort of thing that is likely tobe referred to from soe other page.       
