--- a/template/index.htm
+++ b/template/index.htm
@@ -52,8 +52,6 @@
       <div class="caption"></div>
       <div class="learnmore"><a href='#early'>Learn More about Wide Images</a></div>
    </div>
-
-
     <div class="slidecontainer" data-title="Tall Image" >
       <div class="slide"> <img src="./images/tall.jpg"></div>
       <div class="caption"></div>
@@ -209,7 +207,7 @@ data-fadespeed = "10" >
     </p><p> Lists of steps are included in blue boxes, indented with a blue heading. and dark blue text. </p>
        <div class="procedure">
         <h3>A Procedure</h3>
-         <p>A procedure has a heading, a short introduction, then a list of numbered steps</p>
+         <p>A div with <b>class="procedure"</b> has a heading, a short introduction, then a list of numbered steps</p>
          <ol>
            <li>First you do <b>Step One</b>.
            <li>Then you do <b>Step Two</b>.
